--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
 <body>
     <h1>INI INDEX</h1>
     <p>ke halaman kontak</p>
-    <a href="/contact">contact</a>
+    <a href="/contact">contact</a><br>
+    <a href="/todos-list">todos</a>
 </body>
 </html>
