--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css"
-    />
-</head>
-<body>
+<div class="container mt-5">
     <h1>INI INDEX</h1>
     <p>ke halaman kontak</p>
-    <a href="/contact">contact</a><br>
-    <a href="/todos-list">todos</a>
-</body>
-</html>
+    <a href="/contact" class="btn btn-primary"> Go to conctact page</a><br>
+    <a href="/todos-list"class="btn btn-primary">Go to Todo</a>
+    <a href = "/todo-view" class="btn btn-primary">Go to Todo</a>
+</div>
