--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Page</title>
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-</head>
-<body>
-    <h1>Welcome to the contact</h1>
-    <p>contact</p>
-    <a href="/" class="btn btn-primary">Go to Home Pge</a>
-</body>
+    <style>
+      html,
+      body {
+        background-color: #BBDCE5;
+        height: 100%;
+      }
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      main {
+        flex: 1;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container mt-5">
+      <h1>Contact Us</h1>
+      <a href="/" class="btn btn-primary" style="background-color: #CFAB8D; border-color: #CFAB8D;">Go to Home Page</a>
+      <form>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="text" class="form-control" id="name" required />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" class="form-control" id="email" required />
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea
+            class="form-control"
+            id="message"
+            rows="5"
+            required
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-success" style="background-color: #CFAB8D; border-color: #CFAB8D;">Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
