--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
-<div class="container mt-5">
-    <h1>INI INDEX</h1>
-    <p>ke halaman kontak</p>
-    <a href="/contact" class="btn btn-primary"> Go to conctact page</a><br>
-    <a href="/todos-list"class="btn btn-primary">Go to Todo</a>
-    <a href = "/todo-view" class="btn btn-primary">Go to Todo</a>
+<div class="container mt-5 text-center">
+    <h1>Welcome to the Home Page!</h1>
+    <p>klik link buat milih menu</p>
+    <a href="/contact" class="btn btn-primary" style="background-color: #CFAB8D; border-color: #CFAB8D;">kontak</a>
+    <a href="/todos-list" class="btn btn-primary" style="background-color: #CFAB8D; border-color: #CFAB8D;">Todos-list</a>
+    <a href="/todo-view" class="btn btn-primary" style="background-color: #CFAB8D; border-color: #CFAB8D;">Todos-view</a>
 </div>
